--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="gl">
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <div id="map"></div>
+    <button id="map-reset" onclick="resetMap();">Reset Map</button>
+    <script src="js/config.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
