--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <button id="map-reset" onclick="resetMap();">Reset Map</button>
     <script src="js/config.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/markerclusterer.js"></script>
 </body>
 </html>
